--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 spring.jpa.hibernate.ddl-auto=create
+
 spring.datasource.url=jdbc:h2:mem:hospital
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hivernate.format_sql=true
+
 spring.h2.console.enabled=true
 server.error.include-message=always
+server.error.include-binding-errors=always
 
